[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
diesel = { version = "2.1.0", features = ["sqlite"] }
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4.26"
directories = "5.0.1"
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
